<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelPro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_nombre_producto"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNombrePro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/labelCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_cantidad_producto"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/vlCantidadProducto"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCantidadPro"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:text="" />

            <Button
                android:id="@+id/btDisminuirCantidad"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="-" />

            <Button
                android:id="@+id/btAumentarCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelPrecioPro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_precio_producto"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPrecioPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/labelSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_subTotal_producto"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btEliminarLineaProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_eliminar" />

        <TextView
            android:id="@+id/tvIdLinea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>