<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgProducto"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tvNombrePro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/placeHolder"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgProducto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPrecioPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/placeHolder"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgProducto"
        app:layout_constraintTop_toBottomOf="@+id/tvNombrePro" />

    <ImageView
        android:id="@+id/iconCarro"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_add_shopping_cart_24" />

    <EditText
        android:id="@+id/etCantidad"
        android:layout_width="39dp"
        android:layout_height="53dp"
        android:layout_marginEnd="12dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="number"
        android:text="@string/cantidad_base"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btAumentar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btAumentar"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginBottom="1dp"
        android:text="@string/btAumentar_icon"
        app:layout_constraintBottom_toTopOf="@+id/btDisminuir"
        app:layout_constraintEnd_toStartOf="@+id/iconCarro" />

    <Button
        android:id="@+id/btDisminuir"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:text="@string/btDecrementar_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iconCarro" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/etCantidad"
        app:layout_constraintStart_toEndOf="@+id/tvPrecioPro"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>